src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>KS_Cableado_o_Kit__c</fullName>
        <label>Cableado o Kit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Cableado_o_Kit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Cliente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Productos</relationshipLabel>
        <relationshipName>Productos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Codigo_EAN_Material__c</fullName>
        <label>Código EAN Material</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Comentarios__c</fullName>
        <label>Comentarios</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>KS_Competidor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competidor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Competidor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Productos (Competidor)</relationshipLabel>
        <relationshipName>Productos1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Descripcion_corta_DE__c</fullName>
        <label>Descripción corta DE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Descripcion_corta_EN__c</fullName>
        <label>Descripción corta EN</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>KS_Descripcion_corta_ES__c</fullName>
        <label>Descripción corta ES</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>KS_Descripcion_corta_IT__c</fullName>
        <label>Descripción corta IT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Descripcion_corta_PT__c</fullName>
        <label>Descripción corta PT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Descripcion_corta_RU__c</fullName>
        <label>Descripción corta RU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Descripcion_corta_ZH__c</fullName>
        <label>Descripción corta ZH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Etapa__c</fullName>
        <label>Etapa</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Etapa_No_codificados</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Fabricante__c</fullName>
        <label>Fabricante</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Id_Producto_SF__c</fullName>
        <displayFormat>idsf-{000000}</displayFormat>
        <label>Id Producto SF</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>KS_Id_SAP__c</fullName>
        <externalId>true</externalId>
        <label>Id SAP</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>KS_Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Nombre_Producto_DE__c</fullName>
        <label>Nombre Producto DE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Nombre_Producto_EN__c</fullName>
        <label>Nombre Producto EN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Nombre_Producto_ES__c</fullName>
        <label>Nombre Producto ES</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Nombre_Producto_FR__c</fullName>
        <label>Nombre Producto FR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Nombre_Producto_IT__c</fullName>
        <label>Nombre Producto IT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Nombre_Producto_PT__c</fullName>
        <label>Nombre Producto PT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Nombre_Producto_RU__c</fullName>
        <label>Nombre Producto RU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Nombre_Producto_ZH__c</fullName>
        <label>Nombre Producto ZH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Nombre_producto__c</fullName>
        <formula>BLANKVALUE(
CASE($User.KS_Language__c,
&quot;en_US&quot;	,KS_Nombre_Producto_EN__c,
&quot;fr&quot;	,KS_Nombre_Producto_FR__c,
&quot;it&quot;	,KS_Nombre_Producto_IT__c,
&quot;de&quot;	,KS_Nombre_Producto_DE__c,
&quot;pt_BR&quot;	,KS_Nombre_Producto_PT__c,
&quot;ru&quot;	,KS_Nombre_Producto_RU__c,
&quot;zh_CN&quot;	,KS_Nombre_Producto_ZH__c,
&quot;zh_TW&quot;	,KS_Nombre_Producto_ZH__c,
&quot;es&quot;	,KS_Nombre_Producto_ES__c,
KS_Nombre_Producto_ES__c),
KS_Nombre_Producto_ES__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre producto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Num_de_lineas_electricas__c</fullName>
        <label>Num. de líneas eléctricas</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Num_lineas_el_ctricas</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_OP_Fluvia_Exportacion__c</fullName>
        <label>OP Fluvia Exportacion</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KS_OP_Fluvia_Nacional__c</fullName>
        <label>OP Fluvia Nacional</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KS_OP_Simon_Exportacion__c</fullName>
        <label>OP Simon Exportacion</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KS_OP_Simon_Nacional__c</fullName>
        <label>OP Simon Nacional</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KS_Obra__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Obra</label>
        <referenceTo>KS_Obra__c</referenceTo>
        <relationshipLabel>Productos</relationshipLabel>
        <relationshipName>Productos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Peso_bruto__c</fullName>
        <label>Peso bruto</label>
        <precision>16</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KS_Peso_neto__c</fullName>
        <label>Peso neto</label>
        <precision>16</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KS_Plazo_de_entrega__c</fullName>
        <label>Plazo de entrega</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KS_Plazo_de_entrega_solicitud__c</fullName>
        <label>Plazo de entrega</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KS_Precio_muestra__c</fullName>
        <label>Precio muestra</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KS_Precio_pieza__c</fullName>
        <label>Precio pieza</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KS_Precio_total__c</fullName>
        <formula>KS_Total__c +
IF(TEXT(KS_Cableado_o_Kit__c)=&apos;Cableado&apos;,(((VALUE(TEXT(KS_Num_de_lineas_electricas__c ))-1))*KS_Total__c*0.1)+KS_Total__c*0.3,
IF(TEXT(KS_Cableado_o_Kit__c)=&apos;Kit&apos;,KS_Total__c*0.2,0))
+ KS_Sobrecoste_Modulos__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Precio total</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KS_Prevision_unidades_de_venta__c</fullName>
        <label>Previsión unidades de venta</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KS_Producto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Producto</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Productos</relationshipLabel>
        <relationshipName>Productos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Serie_competidor__c</fullName>
        <label>Serie (competidor)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Sobrecoste_Modulos__c</fullName>
        <label>Sobrecoste Modulos</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KS_Soluci_n_competidor__c</fullName>
        <label>Solución (competidor)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Familias_Soluciones</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Tipo_de_material__c</fullName>
        <label>Tipo de material</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Tipo_de_material</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KS_Unidad_de_peso_neto__c</fullName>
        <label>Unidad de peso neto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Unidad_de_medida</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Unidad_peso_neto__c</fullName>
        <label>Unidad peso neto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Unidad_de_medida</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_descripcion_corta_FR__c</fullName>
        <label>Descripción corta FR</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>KS_descripcion_corta__c</fullName>
        <formula>BLANKVALUE( 
CASE($User.KS_Language__c,
&quot;en_US&quot;,  KS_Descripcion_corta_EN__c ,
&quot;fr&quot;,  KS_descripcion_corta_FR__c ,
&quot;it&quot;,  KS_Descripcion_corta_IT__c ,
&quot;de&quot;,  KS_Descripcion_corta_DE__c ,
&quot;pt_BR&quot;,  KS_Descripcion_corta_PT__c ,
&quot;ru&quot;,  KS_Descripcion_corta_RU__c ,
&quot;zh_TW&quot;,  KS_Descripcion_corta_ZH__c ,
&quot;zh_CN&quot;,  KS_Descripcion_corta_ZH__c ,
&quot;es&quot;,  KS_Descripcion_corta_ES__c ,
&quot;es&quot;,  KS_Descripcion_corta_ES__c ,
KS_Descripcion_corta_ES__c ),
KS_Descripcion_corta_ES__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Descripción corta</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_unidad_peso_bruto__c</fullName>
        <label>Unidad peso bruto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Unidad_de_medida</valueSetName>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>KS_Id_SAP__c</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>KS_Nombre_producto__c</columns>
        <columns>KS_descripcion_corta__c</columns>
        <columns>KS_Tipo_de_material__c</columns>
        <columns>KS_Id_Producto_SF__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos los productos</label>
        <language>es</language>
    </listViews>
    <recordTypes>
        <fullName>KS_Homologaciones</fullName>
        <active>true</active>
        <description>Homologaciones</description>
        <label>Homologaciones</label>
    </recordTypes>
    <recordTypes>
        <fullName>KS_No_Codificados_D1</fullName>
        <active>true</active>
        <description>No codificados tipo D1</description>
        <label>No Codificados D1</label>
    </recordTypes>
    <recordTypes>
        <fullName>KS_No_Codificados_D2</fullName>
        <active>true</active>
        <description>No codificados tipo D2</description>
        <label>No Codificados D2</label>
    </recordTypes>
    <recordTypes>
        <fullName>KS_Productos_de_competidores</fullName>
        <active>true</active>
        <description>Productos de competidores</description>
        <label>Productos de competidores</label>
    </recordTypes>
    <recordTypes>
        <fullName>KS_Productos_estndard</fullName>
        <active>true</active>
        <label>Productos estándard</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>